# protein-variant-nomenclature-parser

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: containers.yml  pypi-publish.yml  python-unittest.yml
antlr/: ProteinVariant.g4
protein_variant_nomenclature_parser/: parser.py  test_parser.py
