[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "protein-variant-nomenclature-parser"
version = "0.0.1"
authors = [
  { name="Jeff Quinn", email="quinnj2@mskcc.org" },
]
description = "An ANTLR based parser for colloquial protein variant nomenclature"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tansey-lab/protein-variant-nomenclature-parser"
"Bug Tracker" = "https://github.com/tansey-lab/protein-variant-nomenclature-parser/issues"
